# note-and-demo

./: .babelrc  .dockerignore  .gitignore  Dockerfile  Dockerfile.server  README.md  basics.md  build.js  cert.pem  css.md  data.csv  data.js  docker-compose.yaml  entry.js  hooks.md  html.md  index.css  index.d.ts  index.html  index.js  index.py  jest.config.js  key.pem  linux.md  nodemon.json  note.md  package-lock.json  package.json  password.ts  pnpm-lock.yaml  predaking.key  python.py  react.md  secret-key  server.crt  server.csr  server.key  test.html  test.js  tsconfig.json  (+7 more)
_server/: index.js
assets/: image1.wmf
coverage/: clover.xml  coverage-final.json  lcov.info
db/: _create.sql  _user__202503041839.sql  card_202502270145.sql  card_202503041839.sql  create.sql  skill_202503041839.sql
docs/: algorithm.md  autotest.md  basics.md  css.md  html.md  java.md  math.md  nginx.md  node.md  note.md  python.md  rust.md  test.md  webgl.md
express/: enums.js  index.js
mock/: getBookList.js  index.js
mysql-data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
next/: .env.development  package-lock.json  package.json
nginx/: Dockerfile  nginx.conf
node/: server.js
python/mcp/: pyproject.toml
python/mcp/app/: client.py  server.py
server/: Dockerfile  _index.js  db.js  enums.js  enums.ts  index.js  index.ts  package.json  pnpm-lock.yaml  predaking.crt  redis.js  (+3 more)
(+925 files in other folders)
